fix z-index arrow quick controller

--- a/fastify/public/css/find.css
+++ b/fastify/public/css/find.css
@@ -12,6 +12,7 @@
     /* top: -3px; */
     bottom: -3px;
     opacity: 0.9;
+    z-index: 99999;
 }
 .quick-controller{
     position: fixed; 
